# SimpleFileManager

./: CMakeLists.txt  CPack.cmake  README.md
resources/: SimpleFileManager.desktop  qml.qrc
resources/qml/: DirectoryIconView.qml  DirectoryListView.qml  DirectoryTableView.qml  FileContextMenu.qml  main.qml
src/: directoryinfoloader.cpp  directoryinfoloader.h  fileclipboard.cpp  fileclipboard.h  main.cpp  mimetypeiconsprovider.cpp  mimetypeiconsprovider.h
src/models/: directorymodel.cpp  directorymodel.h
